--- a/package.json
+++ b/package.json
@@ -4,7 +4,22 @@
     "mocha": "^10.7.3"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "dev": "webpack-dev-server",
+    "start": "webpack"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "babel-loader": "^9.2.1",
+    "css-loader": "^7.1.2",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
+  },
+  "babel": {
+    "presets": [
+      "@babel/env"
+    ]
+  }
 }
